--- a/index1.html
+++ b/index1.html
@@ -50,7 +50,7 @@
             </nav>
         </header>
         <div class="hero__section_container">
-            <img src="./images/heroSectionLogo.png" alt="Zomato Logo" class="hero_section_logo"/>
+            <img src="images/heroSectionLogo.png" alt="Zomato Logo" class="hero_section_logo"/>
             <h1 class="hero__section_title">Discover the best food & drinks in Vijayawada</h1>
             <div class="hero__section_input_container">
                 <input class="input_container_location" type="text" placeholder= "Vijayawada" />
@@ -63,7 +63,7 @@
     <table width="100%"><tr>
       
       <td><div class="we__offer_card">
-        <img src="./images/item1.png" alt="card 1 img"/>
+        <img src="images/item1.png" alt="card 1 img"/>
         <div class="we__offer_content">
           <h2>Order Online</h2>
           <p>Stay home and order to your doorstep</p>
@@ -72,7 +72,7 @@
       </td>
 
       <td><div class="we__offer_card">
-        <img src="./images/item2.png" alt="card 2 img"/>
+        <img src="images/item2.png" alt="card 2 img"/>
         <div class="we__offer_content">
           <h2>Order Online</h2>
           <p>View the cities favourite dining venue</p>
@@ -81,7 +81,7 @@
       </td>
 
       <td><div class="we__offer_card">
-        <img src="./images/item3.png" alt="card 3 img"/>
+        <img src="images/item3.png" alt="card 3 img"/>
         <div class="we__offer_content">
           <h2>Order Online</h2>
           <p>Explore the citys on nightlife outlets</p>
@@ -90,7 +90,7 @@
       </td>
 
       <td><div class="we__offer_card">
-        <img src="./images/item4.png" alt="card 4 img"/>
+        <img src="images/item4.png" alt="card 4 img"/>
         <div class="we__offer_content">
           <h2>Order Online</h2>
           <p>Stay home and order to your doorstep</p>
@@ -146,7 +146,7 @@
     <section class="container get__the_app">
       <div class="semiContainer">
         <div class="left">
-          <img src="./images/mobileBanner.png" alt="Mobile Banner">
+          <img src="images/mobileBanner.png" alt="Mobile Banner">
         </div>
         <div class="right">
           <h1>Get the Zomato App</h1>
@@ -168,8 +168,8 @@
           <div class="download__app_container">
             <h5>Download App From</h5>
             <div>
-              <img src="./images/appleStore.png" alt="Apple Store" />
-              <img src="./images/playStore.png" alt="Play Store" />
+              <img src="images/appleStore.png" alt="Apple Store" />
+              <img src="images/playStore.png" alt="Play Store" />
             </div>
           </div>
         </div>
@@ -281,7 +281,7 @@
     <!--footer section majorly used by grids(2d structure)-->
     <footer class="container footer">
       <div class="footer_section1">
-        <img src="./images/logo.png" alt="zomato logo"/>
+        <img src="images/logo.png" alt="zomato logo"/>
         <div class="section1_buttonContainer">
           <button>
             <img src="https://flagcdn.com/w40/in.png" alt="Indian flag" style="width: 15px;"/>
@@ -334,8 +334,8 @@
               <button><i classs="fa-brands fa-youtube"></i></button>
             </div>
             <br />
-            <img src="./images/appleStore.png" alt="apple store" class="footer__section_logos" />
-            <img src="./images/playStore.png" alt="play store" class="footer__section_logos"/>
+            <img src="images/appleStore.png" alt="apple store" class="footer__section_logos" />
+            <img src="images/playStore.png" alt="play store" class="footer__section_logos"/>
           </div>
         </div>
         <div class="disclamer">
